--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -192,7 +192,10 @@ h2.anchor code {
 .navbar__brand {
   margin-left: 1rem;
 }
-
+.navbar {
+  border-bottom-color: rgba(0, 255, 255, 0.6) !important;
+  box-shadow: 0 0 5px 2px rgba(0, 255, 255, 0.6) !important;
+}
 /* -------------------- End Navbar ------------------- */
 
 /* -------------------- Start Footer ------------------- */
