--- a/src/css/styles.module.css
+++ b/src/css/styles.module.css
@@ -37,6 +37,7 @@
 }
 .card:hover {
   text-decoration: none;
+  box-shadow: 0 0 10px 2px rgba(0, 255, 255, 0.6);
 }
 .card:hover p {
   color: var(--ifm-color-primary);
