--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -43,6 +43,9 @@
   --docsearch-hit-active-color: #242526 !important;
 }
 
+.main-wrapper {
+  background-color: black; /* Replace with your desired background color */
+}
 /* -------------------- Start Overrides ------------------- */
 
 .plugin-pages #docusaurus_skipToContent_fallback {
@@ -193,10 +196,18 @@ h2.anchor code {
   margin-left: 1rem;
 }
 .navbar {
-  border-bottom-color: rgba(0, 255, 255, 0.6) !important;
-  box-shadow: 0 0 5px 2px rgba(0, 255, 255, 0.6) !important;
+  background-color: #171923;
+  border-bottom-color: rgba(0, 255, 255, 0.6);
+  box-shadow: 0 0 5px 2px rgba(0, 255, 255, 0.6);
+  height: 58px;
 }
+.navbar__logo {
+  height: 43px; /* Adjust this value to your desired height */
+  width: auto;  /* Maintain the aspect ratio */
+}
+
 /* -------------------- End Navbar ------------------- */
+
 
 /* -------------------- Start Footer ------------------- */
 
