--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -212,6 +212,7 @@ h2.anchor code {
 }
 
 .navbar__item:hover {
+ transition: transform 0.3s ease;
  transform: scale(1.1);
  /* align text in the center */
  padding-bottom: 0.3rem;
