--- a/src/css/styles.module.css
+++ b/src/css/styles.module.css
@@ -100,7 +100,12 @@
   padding: 1.5rem 1.8rem 1.7rem;
   max-width: 70%;
 }
-
+/* Media query for phones */
+@media (max-width: 768px) {
+  .fullWidthContainer .fullWidthCard {
+    max-width: 100%; /* Full width on smaller screens */
+  }
+}
 .fullWidthCard h3 {
   font-size: 1.063rem;
   color: var(--ifm-color-primary);
